Kubernetes-Training-Complete-v2/04-End-to-End-Projects/Project-02-Amazon-EKS-Production-Style/ingress-example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: store-web
  namespace: store
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: store-web
                port:
                  number: 80
